--- a/package.json
+++ b/package.json
@@ -1,49 +1,79 @@
 {
-  "name": "recipe-parser",
-  "version": "0.1.1",
-  "author": {
-    "name": "Andrew Cates",
-    "email": "catesandrew@gmail.com"
-  },
-  "description": "simple recipe parsers",
-  "bin": {
-    "scrub-recipe": "./bin/scrub-recipe",
-    "_scrub-recipe": "./bin/_scrub-recipe"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "main": "./index",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/catesandrew/recipe-parser"
-  },
-  "dependencies": {
-    "plist": "git://github.com/catesandrew/node-plist.git",
-    "mocha": "~1.17.0",
-    "commander": "~2.1.0",
-    "backbone": "~1.1.0",
-    "request": "~2.31.0",
-    "underscore": "~1.5.2",
-    "async": "~0.2.9",
-    "progress": "~1.1.3",
-    "chai": "~1.8.1",
-    "pluralize": "0.0.6",
-    "natural": "~0.1.25",
-    "underscore.string": "~2.3.3",
-    "colors": "~0.6.2",
-    "cheerio": "~0.13.1",
-    "change-case": "~1.0.4",
-    "prompt": "~0.2.12"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-shell": "~0.6.4",
-    "grunt-concurrent": "~0.4.3",
-    "grunt-mocha-test": "~0.9.0",
-    "npm": "~1.3.26",
-    "install": "~0.1.7",
-    "load-grunt-tasks": "~0.3.0"
-  }
+    "name": "recipe-parser",
+    "version": "0.1.1",
+    "author": {
+        "name": "Andrew Cates",
+        "email": "catesandrew@gmail.com"
+    },
+    "description": "simple recipe parsers",
+    "bin": {
+        "scrub-recipe": "./bin/scrub-recipe",
+        "_scrub-recipe": "./bin/_scrub-recipe"
+    },
+    "scripts": {
+        "test": "mocha",
+        "compile-libmacgourmetconstantsjs": "babel lib\\mac-gourmet-constants.js -o lib\\mac-gourmet-constants.js --require babel-polyfill --presets env",
+        "compile-liblogjs": "babel lib\\log.js -o lib\\log.js --require babel-polyfill --presets env",
+        "compile-libscrubcooksillustratedjs": "babel lib\\scrub-cooks-illustrated.js -o lib\\scrub-cooks-illustrated.js --require babel-polyfill --presets env",
+        "compile-libutiljs": "babel lib\\util.js -o lib\\util.js --require babel-polyfill --presets env",
+        "compile-testdatacooksillustratedjs": "babel test\\data\\cooks-illustrated.js -o test\\data\\cooks-illustrated.js --require babel-polyfill --presets env",
+        "compile-libcooksillustratedparserjs": "babel lib\\cooks-illustrated-parser.js -o lib\\cooks-illustrated-parser.js --require babel-polyfill --presets env",
+        "compile-testtestjs": "babel test\\test.js -o test\\test.js --require babel-polyfill --presets env",
+        "compile-libentitiesjs": "babel lib\\entities.js -o lib\\entities.js --require babel-polyfill --presets env",
+        "compile-libscrubsimplegreensmoothiesjs": "babel lib\\scrub-simple-green-smoothies.js -o lib\\scrub-simple-green-smoothies.js --require babel-polyfill --presets env",
+        "compile-librecipeparserjs": "babel lib\\recipe-parser.js -o lib\\recipe-parser.js --require babel-polyfill --presets env",
+        "compile-testdatagoodeatsjs": "babel test\\data\\good-eats.js -o test\\data\\good-eats.js --require babel-polyfill --presets env",
+        "compile-libbaserecipeparserjs": "babel lib\\base-recipe-parser.js -o lib\\base-recipe-parser.js --require babel-polyfill --presets env",
+        "compile-libmacgourmetexportjs": "babel lib\\mac-gourmet-export.js -o lib\\mac-gourmet-export.js --require babel-polyfill --presets env",
+        "compile-libscrubfoodnetworkjs": "babel lib\\scrub-food-network.js -o lib\\scrub-food-network.js --require babel-polyfill --presets env",
+        "compile-libscrubseriouseatsjs": "babel lib\\scrub-serious-eats.js -o lib\\scrub-serious-eats.js --require babel-polyfill --presets env",
+        "compile-testdataseriouseatsjs": "babel test\\data\\serious-eats.js -o test\\data\\serious-eats.js --require babel-polyfill --presets env",
+        "compile-libcategoryclassifierjs": "babel lib\\category-classifier.js -o lib\\category-classifier.js --require babel-polyfill --presets env",
+        "compile-libfoodnetworkparserjs": "babel lib\\food-network-parser.js -o lib\\food-network-parser.js --require babel-polyfill --presets env",
+        "compile-libseriouseatsparserjs": "babel lib\\serious-eats-parser.js -o lib\\serious-eats-parser.js --require babel-polyfill --presets env",
+        "compile-indexjs": "babel index.js -o index.js --require babel-polyfill --presets env",
+        "compile-1_script": "npm run compile-libmacgourmetconstantsjs && npm run compile-liblogjs && npm run compile-libscrubcooksillustratedjs && npm run compile-libutiljs && npm run compile-testdatacooksillustratedjs && npm run compile-libcooksillustratedparserjs && npm run compile-testtestjs && npm run compile-libentitiesjs && npm run compile-libscrubsimplegreensmoothiesjs && npm run compile-librecipeparserjs && npm run compile-testdatagoodeatsjs && npm run compile-libbaserecipeparserjs && npm run compile-libmacgourmetexportjs && npm run compile-libscrubfoodnetworkjs && npm run compile-libscrubseriouseatsjs && npm run compile-testdataseriouseatsjs && npm run compile-libcategoryclassifierjs && npm run compile-libfoodnetworkparserjs && npm run compile-libseriouseatsparserjs && npm run compile-indexjs",
+        "compile": "npm run compile-1_script"
+    },
+    "main": "./index",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/catesandrew/recipe-parser"
+    },
+    "dependencies": {
+        "plist": "git://github.com/catesandrew/node-plist.git",
+        "mocha": "~1.17.0",
+        "commander": "~2.1.0",
+        "backbone": "~1.1.0",
+        "request": "~2.31.0",
+        "underscore": "~1.5.2",
+        "async": "~0.2.9",
+        "progress": "~1.1.3",
+        "chai": "~1.8.1",
+        "pluralize": "0.0.6",
+        "natural": "~0.1.25",
+        "underscore.string": "~2.3.3",
+        "colors": "~0.6.2",
+        "cheerio": "~0.13.1",
+        "change-case": "~1.0.4",
+        "prompt": "~0.2.12"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-shell": "~0.6.4",
+        "grunt-concurrent": "~0.4.3",
+        "grunt-mocha-test": "~0.9.0",
+        "npm": "~1.3.26",
+        "install": "~0.1.7",
+        "load-grunt-tasks": "~0.3.0",
+        "babel-cli": "latest",
+        "babel-core": "latest",
+        "babel-plugin-add-module-exports": "latest",
+        "babel-plugin-transform-es2015-modules-commonjs": "latest",
+        "babel-polyfill": "latest",
+        "babel-plugin-transform-object-rest-spread": "latest",
+        "babel-preset-env": "latest",
+        "babel-preset-es2015-without-strict": "latest"
+    }
 }
