--- a/package.json
+++ b/package.json
@@ -1,49 +1,62 @@
 {
-  "name": "recipe-parser",
-  "version": "0.1.1",
-  "author": {
-    "name": "Andrew Cates",
-    "email": "catesandrew@gmail.com"
-  },
-  "description": "simple recipe parsers",
-  "bin": {
-    "scrub-recipe": "./bin/scrub-recipe",
-    "_scrub-recipe": "./bin/_scrub-recipe"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "main": "./index",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/catesandrew/recipe-parser"
-  },
-  "dependencies": {
-    "plist": "git://github.com/catesandrew/node-plist.git",
-    "mocha": "~1.17.0",
-    "commander": "~2.1.0",
-    "backbone": "~1.1.0",
-    "request": "~2.31.0",
-    "underscore": "~1.5.2",
-    "async": "~0.2.9",
-    "progress": "~1.1.3",
-    "chai": "~1.8.1",
-    "pluralize": "0.0.6",
-    "natural": "~0.1.25",
-    "underscore.string": "~2.3.3",
-    "colors": "~0.6.2",
-    "cheerio": "~0.13.1",
-    "change-case": "~1.0.4",
-    "prompt": "~0.2.12"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-shell": "~0.6.4",
-    "grunt-concurrent": "~0.4.3",
-    "grunt-mocha-test": "~0.9.0",
-    "npm": "~1.3.26",
-    "install": "~0.1.7",
-    "load-grunt-tasks": "~0.3.0"
-  }
+    "name": "recipe-parser",
+    "version": "0.1.1",
+    "author": {
+        "name": "Andrew Cates",
+        "email": "catesandrew@gmail.com"
+    },
+    "description": "simple recipe parsers",
+    "bin": {
+        "scrub-recipe": "./bin/scrub-recipe",
+        "_scrub-recipe": "./bin/_scrub-recipe"
+    },
+    "scripts": {
+        "test": "mocha",
+        "compile-testdata": "babel test\\data --out-dir test\\data --require babel-polyfill --presets env",
+        "compile-test": "babel test --out-dir test --require babel-polyfill --presets env",
+        "compile-lib": "babel lib --out-dir lib --require babel-polyfill --presets env",
+        "compile-indexjs": "babel index.js -o index.js --require babel-polyfill --presets env",
+        "compile-1_script": "npm run compile-testdata && npm run compile-test && npm run compile-lib && npm run compile-indexjs",
+        "compile": "npm run compile-1_script"
+    },
+    "main": "./index",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/catesandrew/recipe-parser"
+    },
+    "dependencies": {
+        "plist": "git://github.com/catesandrew/node-plist.git",
+        "mocha": "~1.17.0",
+        "commander": "~2.1.0",
+        "backbone": "~1.1.0",
+        "request": "~2.31.0",
+        "underscore": "~1.5.2",
+        "async": "~0.2.9",
+        "progress": "~1.1.3",
+        "chai": "~1.8.1",
+        "pluralize": "0.0.6",
+        "natural": "~0.1.25",
+        "underscore.string": "~2.3.3",
+        "colors": "~0.6.2",
+        "cheerio": "~0.13.1",
+        "change-case": "~1.0.4",
+        "prompt": "~0.2.12"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-shell": "~0.6.4",
+        "grunt-concurrent": "~0.4.3",
+        "grunt-mocha-test": "~0.9.0",
+        "npm": "~1.3.26",
+        "install": "~0.1.7",
+        "load-grunt-tasks": "~0.3.0",
+        "babel-cli": "latest",
+        "babel-core": "latest",
+        "babel-plugin-add-module-exports": "latest",
+        "babel-plugin-transform-es2015-modules-commonjs": "latest",
+        "babel-polyfill": "latest",
+        "babel-plugin-transform-object-rest-spread": "latest",
+        "babel-preset-env": "latest"
+    }
 }
